@@ -1,17 +1,17 @@
-3890d46ac8484daeddc9cf156f770724 *ChangeLog
-ee12bcd06789b0f4c23a9bc7906b36bd *DESCRIPTION
+11c1f27df26d45500f16b0470070ba3d *ChangeLog
+0592706b96cbdc4b6395cb1651791e20 *DESCRIPTION
 2c8b48af4dd31c66d2f44aacffb87212 *NAMESPACE
 6f33de887e28148af8587450070830e5 *R/AIC.dglars.R
 2228b8cceb54976f0e7cd7944e144292 *R/BIC.dglars.R
 64db8c88a5bca6a4be5574c65925c504 *R/coef.cvdglars.R
 91b58eefaec8b49d8ff7a9bbc048fa07 *R/coef.dglars.R
-65f0f6908e95f1e26f3baa429b8791eb *R/cvdglars.R
+7874fba5f6c00790a82fb99bc8d1c052 *R/cvdglars.R
 d106f42b52584653139a529e86a9f7ce *R/cvdglars.fit.R
 8d5105cd34a4a2dca299e8ce0bed4428 *R/cvdglars_ccd.R
 ec1f0a773add43f65b895c94b4278ea8 *R/cvdglars_pc.R
 b32d081e2d8608bab4b9422f34ef5a3a *R/d2mu_de2_mk.R
 4315ea5f45c433231b85cfa08d362487 *R/d2th_dmu2_mk.R
-e4a0adceab863c0a5928b305ea6edde7 *R/dglars.R
+524a54f8abb0258681ed3a5dca1d5c0d *R/dglars.R
 4e5cfa5fb9c8655d53df0606a3c4a615 *R/dglars.fit.R
 880859ca043e12ade47381048ebaf3c0 *R/dglars_ccd.R
 a98d3b1ea96511a4368cada2b4bd2246 *R/dglars_pc.R
@@ -26,7 +26,7 @@ a244fcf0ff17e089c5880497eb44a214 *R/make_ru.R
 3b408a298df04e22a6680f2a22075282 *R/make_summary_table.R
 72278567083fcf69407549992d54214b *R/phihat.R
 dd667866f29dfff4dc8d97839488f11a *R/plot.cvdglars.R
-c5a45614b1854ad8e17906879ec7b71c *R/plot.dglars.R
+6524dc1970b517d298d740e9717b8d39 *R/plot.dglars.R
 8cbaf4e1bdb24ae6187e6b39cb9f94c4 *R/predict.dglars.R
 f5b0da9c97b31d6408f4c8f822c6156b *R/print.cvdglars.R
 8a6d78d1c352e64651a241a8c78849aa *R/print.dglars.R
@@ -39,21 +39,21 @@ f5941e4d6e3985ad8657abfb91326447 *data/breast.RData
 24b37b86587b18e5742cdf4c8cc7c9e0 *data/datalist
 dd65e152c59ea21d62ce75f1cc66e07c *data/duke.RData
 f6e2c6d215351e4312346bca741c5eb8 *inst/CITATION
-6f99b07d86d19aac4c9f5f32350ccccf *man/AIC.dglars.Rd
-1b61c2273dbb4f5cd94ccd5de5fe9820 *man/alon.Rd
-b4d7ef3f83bb9c9d2bb316452f228ca9 *man/breast.Rd
+cbaca7951b5f190703e36038627f7743 *man/AIC.dglars.Rd
+0e7094775fe0b54a92bd25a781234d41 *man/alon.Rd
+4d47ccd4dca27e4c310b3320484efa63 *man/breast.Rd
 3271af198a373db3ebf52ee0dc4c33ac *man/coef.cvdglars.Rd
 85d3dcefdc45763ae9ae08639a857147 *man/coef.dglars.Rd
-a68372d86657aa74c69576b99f63216b *man/cvdglars.Rd
+d1b9a3da93e2abca4caaf2766f4c9986 *man/cvdglars.Rd
 f4b6368a63259214f352a920b395e563 *man/dglars-internal.Rd
-ca506a889e76706f34d3d7904f277ca2 *man/dglars-package.Rd
-c9b6f235b44eb621db0101ed615cd102 *man/dglars.Rd
-73abcd70d659682758ac42dedaa105c3 *man/duke.Rd
-2bca00afb3cf28c29160e5e5e5258ea4 *man/gdf.Rd
-e9b5123757d0f59eab2b7775c9be7d94 *man/grcv.Rd
+4e19cf5f1ba938b5d1751bb44b143ad4 *man/dglars-package.Rd
+2cfef32228cd4968e2033fd6fff4f246 *man/dglars.Rd
+50a780b6879f73ec88258a113bc797f9 *man/duke.Rd
+645787e91b5c20bff4af646181d5e65b *man/gdf.Rd
+f95a322341c8e3692f6e053379c32200 *man/grcv.Rd
 6f9965fc41af31569639287793b4f93a *man/logLik.dglars.Rd
-6aab8b414a03b06c72db4243c0a54fc0 *man/phihat.Rd
-8375d4af598c9f2f21601dc36fed71ee *man/plot.cvdglars.Rd
+fdbd792564af9b2dc001c4e1866bd87c *man/phihat.Rd
+d7ed7f71e089c6f1b4bf0aa4af48f039 *man/plot.cvdglars.Rd
 ccc010df63c32fd478dd4319cb6bc591 *man/plot.dglars.Rd
 196da4bb7fa01c0ef055e9cd5cc286ab *man/predict.dglars.Rd
 f2a6b72207579c50a71cbc47b69c6858 *man/print.cvdglars.Rd
@@ -67,7 +67,7 @@ b335eab6dfb26342f2b4cf19aa0f9e26 *src/ccd_pois_c.f90
 e02ed9543af287c88028075470d5d336 *src/init.c
 83a0b4a9df020717de6b0b40f370bcea *src/pc_bin_c.f90
 0517dcf3e90eed1a01d91b7ce36fb4da *src/pc_bin_g.f90
-6f3d5566c4b02f817d07a4105251ff14 *src/pc_cvdglars.f90
+6e7ab10eafa27ba1d5aad81db39a61e0 *src/pc_cvdglars.f90
 5df850f92b3301cc4f25150d4407510d *src/pc_gamma_c.f90
 351a40d82127da58b871f66a0a2d8180 *src/pc_gamma_g.f90
 518314cd131d18f4f3afbd4c23e0992c *src/pc_gaussian_c.f90
@@ -77,5 +77,5 @@ d17b628393fd27c7ef6b24d25c18f6f7 *src/pc_gaussian_g.f90
 28bc4f234347079168f1a0cf57b8c09c *src/pc_pois_c.f90
 5e26d2dad7e571266235be58e52c679f *src/pc_pois_g.f90
 8c48535fb642da403a00f153d28d9587 *src/predict.f90
-722ea13750a014feffebe195fc086070 *src/shared.f90
+1e684865238e9d24cbaa0e3d935a83db *src/shared.f90
 545e1aac547dfb07de15592bc6e9af6a *src/tools.f90
