@@ -9,7 +9,7 @@ This data set details microarray experiment for 44 breast cancer patients. The b
 }
 \usage{data(duke)}
 \references{
-M. West, C. Blanchette, H. Dressman, E. Huang, S. Ishida, R. Spang, H. Zuzan, J.A. Olson, Jr., J.R. Marks and Joseph R. Nevins (2001)
+M. West, C. Blanchette, H. Dressman, E. Huang, S. Ishida, R. Spang, H. Zuzan, J.A. Olson, Jr., J.R. Marks and Joseph R. Nevins (2001) <doi:10.1073/pnas.201162998>
 \emph{Predicting the clinical status of human breast cancer by using gene expression profiles}, \emph{Proceedings of the National Accademy of Sciences of the USA}, Vol 98(20), 11462-11467.
 }
 \keyword{datasets}
