@@ -1,3 +1,6 @@
+2019-11-21 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 2.1.4
+    * fixed bug in dglars.R
+
 2019-06-12 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 2.1.3
     * fixed bug in pc_cvdglars.f90
 
